Add Spring Data Gremlin auto-configuration and custom serializer support